# src/controllers/review.controller.ts
@@ -1,7 +1,8 @@
-import { Controller, Route, Tags, Get, Path, Post, Body, Patch } from "tsoa";
+import { Controller, Route, Tags, Get, Path, Post, Body, Patch, Delete } from "tsoa";
 import { ReviewDTO } from "../dto/review.dto";
 import { reviewService } from "../services/review.service";
 import { notFound } from "../error/NotFoundError";
+import { consoleService } from "../services/console.service";
 
 @Route("reviews")
 @Tags("Reviews")
@@ -32,6 +33,10 @@ export class ReviewController extends Controller {
     const { rating, review_text, game } = requestBody;
 
     return reviewService.updateReview(id, rating, review_text, game);
+  }
 
+  @Delete("{id}")
+  public async deleteConsole(@Path() id: number): Promise<void> {
+    await reviewService.deleteReview(id);
   }
 }
